<resources>
    <string name="app_name">NMedia</string>
    <string name="NMediaText" translatable="true">Nmedia!</string>
    <string name="hello">Hello, World!</string>
    <string name="date" translatable="false">20.01.2023</string>
    <string name="author" translatable="true">Netology. University of Internet Professions</string>
    <string name="post_author_avatar" translatable="true">Netology</string>
    <string name="about_netology" translatable="false">Привет. Это новая Нетология. Когда-то Нетология начиналась с интенсивов по онлайн маркетнигу. Затем появились курсы по дизайну и разработке, аналитике и управлению. Мы растем сами и помогаем расти студентам от новичков до уверенных профессионалов. Но самое важное остается с нами, мы верим, что в каждом уже есть сила,которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия - помочь встать на путь роста и начать цепочку перемен. https://netology.ru/</string>
    <string name="likes_count" translatable="false">10</string>
    <string name="share_count" translatable="false">5</string>
    <string name="views_count" translatable="false">12,5K</string>
    <string name="content_desctiption_menuButton" translatable="false">menu button</string>
    <string name="description_likeButton" translatable="false">like</string>
    <string name="description_share_button" translatable="false">share</string>
    <string name="description_views" translatable="false">views</string>
    <string name="description_edit_cancel" translatable="false">cancel editing</string>
    <string name="description_save_button" translatable="false">Save</string>
    <string name="popup_menu_remove" translatable="true">Remove</string>
    <string name="popup_menu_edit" translatable="true">Edit</string>
    <string name="hint_controlPanel" translatable="true">Text</string>
    <string name="error_empty_content" translatable="true">Content can\'t be empty</string>
    <string name="edit_text" translatable="true">Edit post</string>
    <string name="chooser_share_post" translatable="true">Share post</string>
    <string name="chooser_video_post" translatable="false">Video</string>
    <string name="google_api_unavailable" translatable="true">Google Api Unavailable</string>
    <string name="channel_remote_name" translatable="false">Server notifications</string>
    <string name="channel_remote_description" translatable="false">Notifications from remote server</string>
    <string name="notification_user_liked" translatable="false">User %1$s liked %2$s\'s post</string>
    <string name="notification_user_posted" translatable="true">User %1$s create new post:</string>
    <string name="retry_loading" translatable="true">Retry</string>
    <string name="empty_posts" translatable="true">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading" translatable="true">Something went wrong. Try again later</string>
    <string name="new_posts_button" translatable="true">New Posts</string>
    <string name="extended_fab_content_desc" translatable="true">new posts button</string>
    <string name="clear">Clear</string>
    <string name="photo_pick_error">Photo pick error</string>
    <string name="register">Register</string>
    <string name="authorize">Authorize</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_signin">Sign In</string>
    <string name="dialog_are_you_sure">Are you sure?</string>
    <string name="dialog_ok" translatable="false">Ok</string>
    <string name="title_sign_in">Sign In</string>
    <string name="title_registration">Registration</string>
    <string name="register_button">Register</string>
    <string name="name_edittext">Name</string>
    <string name="confirm_the_password_edittext">Confirm the password</string>
    <string name="password_edittext">Password</string>
    <string name="password_not_conf">Password not confirmed</string>
    <string name="date_separator_week">Last week</string>
    <string name="date_separator_yesterday">Yesterday</string>
    <string name="date_separator_today">Today</string>
</resources>
