<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing"
    tools:context=".FeedFragment">

    <ImageView
        android:id="@+id/imageSaved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/sel_save"
        app:layout_constraintTop_toBottomOf="@id/viewsCount"
        android:visibility="visible"
        tools:visibility="visible"
        android:checkable = "true"
        android:layout_marginTop="8dp"/>

    <ImageView
        android:id="@+id/avatarImageView"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/barrierOnTop"
        android:contentDescription="@string/post_author_avatar"
        android:src="@drawable/netology"
        android:layout_marginBottom="@dimen/common_spacing"
        />


    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:lines="1"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@id/avatarImageView"
        app:layout_constraintBottom_toTopOf="@id/textPublished"
        app:layout_constraintTop_toTopOf="@id/avatarImageView"
        app:layout_constraintEnd_toStartOf="@id/menuButton"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"/>


    <TextView
        android:id="@+id/textPublished"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/date"
        app:layout_constraintStart_toEndOf="@id/avatarImageView"
        app:layout_constraintTop_toBottomOf="@id/author"
        app:layout_constraintBottom_toBottomOf="@id/barrierOnTop"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        app:layout_constraintEnd_toStartOf="@id/menuButton"/>

    <com.google.android.material.button.MaterialButton
        style="@style/style_option_button"
        android:id="@+id/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="0dp"
        android:minWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/content_desctiption_menuButton"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierOnTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatarImageView, textPublished, menuButton, author"
         />

<!--    <androidx.constraintlayout.widget.Barrier-->
<!--        android:id="@+id/barrierUnderContent"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:barrierDirection="bottom"-->
<!--        app:constraint_referenced_ids="content"-->
<!--        />-->

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_netology"
        app:layout_constraintTop_toBottomOf="@id/barrierOnTop"
        app:layout_constraintBottom_toTopOf="@id/imageAttachmentView"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        />

   <ImageButton
       android:id="@+id/imageVideoButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:src="@drawable/youtube_logo"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toTopOf="@id/barrierUnderVideo"
       app:layout_constraintTop_toBottomOf="@id/imageAttachmentView"
       android:layout_margin="@dimen/common_spacing"
       android:scaleType="fitCenter"
       android:adjustViewBounds="true"
       android:background="@android:color/transparent" />

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_play_video_48"
        app:layout_constraintStart_toStartOf="@id/imageVideoButton"
        app:layout_constraintEnd_toEndOf="@id/imageVideoButton"
        app:layout_constraintTop_toTopOf="@id/imageVideoButton"
        app:layout_constraintBottom_toBottomOf="@id/imageVideoButton"
        android:background="@android:color/transparent" />





    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierUnderVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="imageVideoButton"
        app:barrierDirection="bottom" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/videoGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:visibility="gone"
        android:visibility="gone"
        app:constraint_referenced_ids="imageVideoButton, barrierUnderVideo, playButton"/>




    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        style="@style/styleLikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierUnderVideo"
        app:layout_constraintEnd_toStartOf="@id/share"
        android:layout_marginTop="@dimen/common_spacing"
        android:contentDescription="@string/description_likeButton"
        tools:text="100"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:checkable="true"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        style="@style/style_share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:contentDescription="@string/description_share_button"
        android:minWidth="0dp"
        android:minHeight="0dp"
        app:layout_constraintStart_toEndOf="@id/like"
        app:layout_constraintTop_toBottomOf="@id/barrierUnderVideo"
        tools:text="100" />

    <ImageView
        android:id="@+id/viewsImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/viewsCount"
        app:layout_constraintTop_toBottomOf="@id/barrierUnderVideo"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/margin_near_imageButton"
        android:src="@drawable/ic_baseline_remove_red_eye_24"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_views"
        />



    <TextView
        android:id="@+id/viewsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/barrierUnderVideo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/viewsImage"
        tools:text="@string/views_count"
        android:layout_marginTop="@dimen/common_spacing"
        android:textSize="@dimen/text_size"
        />

    <ImageView
        android:id="@+id/imageAttachmentView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/imageVideoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:visibility="gone"
        tools:visibility="visible"
        tools:src="@tools:sample/backgrounds/scenic" />


</androidx.constraintlayout.widget.ConstraintLayout>
